# captcha-solver

./: .gitignore  example.py  pyproject.toml
src/captcha_solver/geetest/: _identifier.py  _slider.py  solvers.py
src/geetest_slider_solver/: identifier.py  solver.py  utils.py
