[tool.poetry]
name = "captcha-solver"
version = "0.2.0"
description = ""
authors = ["Eldar MSI <kursus1010@gmail.com>"]
readme = "README.md"
packages = [{include = "captcha_solver", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^2.1.3"
pillow = "^11.0.0"
opencv-python = "^4.10.0.84"
requests = "^2.32.3"
selenium = "^4.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
